able to draw object

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
         height: 500px;
         border: 1px solid #bbbbbb;
       }
+      .toolbar {
+        display: flex;
+        justify-content: space-between;
+      }
+      #sec {
+        position: fixed;
+        left: 50px;
+        top: 50px;
+        font-size: 72px;
+      }
     </style>
   </head>
 
@@ -16,10 +26,5 @@
     <div id="app"></div>
 
     <script src="src/index.js"></script>
-
-    <canvas id="canvas" width="500" height="500"></canvas>
-    <div>
-      <button id="restart-btn" type="button">Restart</button>
-    </div>
   </body>
 </html>
